add realtime scene labelling frontend and update answer path

--- a/material/1-cnn-intro.ipynb
+++ b/material/1-cnn-intro.ipynb
@@ -532,7 +532,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Take your time to make exercice, you can check the correction : [`Here`](../correction/exo1.py)"
+    "Take your time to make exercice, you can check the correction : [`Here`](../answers/exo1.py)"
    ]
   },
   {
@@ -1554,7 +1554,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[ANSWER] Take time to make exercice, you can check the correction : [`Here`](../correction/exo2.py)"
+    "[ANSWER] Take time to make exercice, you can check the correction : [`Here`](../answers/exo2.py)"
    ]
   },
   {
